--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "ocds-keywork-analyzer-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "An API interface that allows a user to access open contracting data with keyword analysis.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/mocha/bin/_mocha ./test/**/*.test.js",
+    "start": "nodemon src/server/index.js",
+    "lint": "eslint ./src --fix",
+    "format": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|md|vue)\"",
+    "precommit": "lint-staged"
   },
   "repository": {
     "type": "git",
@@ -21,5 +25,56 @@
   "bugs": {
     "url": "https://github.com/DBuckley0126/OCDS-keywork-analyzer-api/issues"
   },
-  "homepage": "https://github.com/DBuckley0126/OCDS-keywork-analyzer-api#readme"
+  "homepage": "https://github.com/DBuckley0126/OCDS-keywork-analyzer-api#readme",
+  "lint-staged": {
+    "*.js": [
+      "prettier --write",
+      "git add"
+    ]
+  },
+  "dependencies": {
+    "@koa/cors": "2.2.3",
+    "bcryptjs": "^2.4.3",
+    "file-system": "2.2.2",
+    "fs": "0.0.1-security",
+    "husky": "4.2.1",
+    "koa": "2.11.0",
+    "koa-body": "4.1.1",
+    "koa-bodyparser": "^4.2.0",
+    "koa-ejs": "4.3.0",
+    "koa-json": "2.0.2",
+    "koa-logger": "3.2.1",
+    "koa-mount": "4.0.0",
+    "koa-passport": "^4.0.1",
+    "koa-redis": "^3.1.1",
+    "koa-router": "8.0.8",
+    "koa-send": "5.0.0",
+    "koa-session": "^5.5.1",
+    "koa-static": "5.0.0",
+    "lint-staged": "10.0.7",
+    "lodash": "4.17.15",
+    "passport-local": "^1.0.0",
+    "pg": "^7.1.2",
+    "puppeteer": "3.0.0",
+    "request": "2.88.2",
+    "request-promise": "4.2.5"
+  },
+  "devDependencies": {
+    "chai": "4.1.1",
+    "chai-http": "3.0.0",
+    "eslint": "6.8.0",
+    "eslint-config-airbnb-base": "14.1.0",
+    "eslint-plugin-import": "2.20.2",
+    "mocha": "3.5.0",
+    "nodemon": "2.0.3",
+    "sinon": "^4.1.5",
+    "eslint-config-fbjs": "3.1.1",
+    "eslint-config-prettier": "6.10.0",
+    "eslint-config-react-app": "5.2.0",
+    "eslint-plugin-babel": "5.3.0",
+    "eslint-plugin-flowtype": "3.13.0",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-prettier": "3.1.2",
+    "prettier": "1.19.1"
+  }
 }
