--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
         "type": "node",
         "request": "launch",
         "runtimeExecutable": "nodemon",
-        "program": "${workspaceFolder}/src/server/index.js",
+        "program": "${workspaceFolder}/src/server/app.js",
         "restart": true,
         "console": "integratedTerminal",
         "internalConsoleOptions": "neverOpen"
