--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@koa/cors": "2.2.3",
     "bcryptjs": "^2.4.3",
+    "check-word": "1.1.0",
     "file-system": "2.2.2",
     "fs": "0.0.1-security",
     "husky": "4.2.1",
@@ -51,10 +52,12 @@
     "koa-send": "5.0.0",
     "koa-session": "^5.5.1",
     "koa-static": "5.0.0",
+    "lda": "0.2.0",
     "lint-staged": "10.0.7",
     "lodash": "4.17.15",
     "passport-local": "^1.0.0",
     "pg": "^7.1.2",
+    "pluralize": "8.0.0",
     "puppeteer": "3.0.0",
     "request": "2.88.2",
     "request-promise": "4.2.5"
