--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "./node_modules/mocha/bin/_mocha ./test/**/*.test.js",
-    "start": "nodemon src/server/app.js",
+    "start": "node src/server/app.js",
+    "nodemon": "nodemon src/server/app.js",
     "lint": "eslint ./src --fix",
     "format": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|md|vue)\"",
     "precommit": "lint-staged"
